service/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apc-service
spec:
  selector:
    app: app-simulator
    deploy-type: production
  ports:
    - port: 3031
